--- a/app/views/weights/edit.erb
+++ b/app/views/weights/edit.erb
@@ -1,29 +1,16 @@
-<h1>Modifier une entrée de poids</h1>
+<h1 class="text-2xl font-semibold text-gray-800 mb-4">
+  Modifier l’entrée de poids
+</h1>
 
-<% if @weight.errors.any? %>
-<ul>
-  <% @weight.errors.full_messages.each do |msg| %>
-  <li style="color: red"><%= msg %></li>
-  <% end %>
-</ul>
+<% if @error %>
+<p style="color: red"><%= @error %></p>
 <% end %>
 
 <form action="/weights/<%= @weight.id %>" method="post">
   <input type="hidden" name="_method" value="put" />
 
-  <label for="weight">Poids (kg) :</label>
-  <input
-    type="number"
-    name="weight[weight]"
-    step="0.1"
-    value="<%= @weight.weight %>"
-    required
-  />
-
-  <label for="date">Date :</label>
-  <input type="date" name="weight[date]" value="<%= @weight.date %>" required />
-
-  <button type="submit">Mettre à jour</button>
+  <%= erb :'weights/_form', locals: { weight_value: @weight.weight, date_value:
+  @weight.date, button_text: 'Mettre à jour' } %>
 </form>
 
 <a href="/weights">Annuler</a>
