style: added new css style and new attributes

--- a/app/views/food_entries/_form.erb
+++ b/app/views/food_entries/_form.erb
@@ -5,7 +5,6 @@
       type="text"
       name="food_entry[name]"
       id="name"
-      step="0.1"
       value="<%= name_value %>"
       required
       class="w-80 px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
@@ -14,7 +13,7 @@
 
   <section>
     <label for="calories" class="block text-gray-700 font-medium"
-      >Nombre de calories :</label
+      >Calories :</label
     >
     <input
       type="number"
@@ -28,15 +27,55 @@
   </section>
 
   <section>
-    <label for="date" class="block text-gray-700 font-medium">Date :</label>
+    <label for="carbs" class="block text-gray-700 font-medium"
+      >Glucides (g) :</label
+    >
     <input
-      type="date"
-      name="food_entry[date]"
-      id="date"
-      value="<%= date_value %>"
+      type="number"
+      name="food_entry[carbs]"
+      id="carbs"
+      step="0.1"
+      value="<%= carbs_value %>"
       required
       class="w-80 px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
     />
+  </section>
+
+  <section>
+    <label for="proteins" class="block text-gray-700 font-medium"
+      >Protéines (g) :</label
+    >
+    <input
+      type="number"
+      name="food_entry[proteins]"
+      id="proteins"
+      step="0.1"
+      value="<%= proteins_value %>"
+      required
+      class="w-80 px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
+    />
+  </section>
+
+  <section>
+    <label for="fats" class="block text-gray-700 font-medium"
+      >Lipides (g) :</label
+    >
+    <input
+      type="number"
+      name="food_entry[fats]"
+      id="fats"
+      step="0.1"
+      value="<%= fats_value %>"
+      required
+      class="w-80 px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
+    />
+  </section>
+
+  <section>
+    <label for="public" class="block text-gray-700 font-medium">Public :</label>
+    <input type="checkbox" name="food_entry[public]" id="public" <%=
+    public_value ? 'checked' : '' %> class="h-5 w-5 text-blue-500
+    border-gray-300 rounded focus:ring-blue-500" />
   </section>
 </div>
 
