--- a/app/views/food_entries/index.erb
+++ b/app/views/food_entries/index.erb
@@ -1,27 +1,29 @@
 <div class="container mx-auto">
-  <h1 class="text-2xl font-bold text-gray-800 mb-4">Entrées alimentaires</h1>
+  <h1 class="text-2xl font-bold text-gray-800 mb-4">Aliments</h1>
 
   <table
     class="table-auto w-full text-left border-collapse border border-gray-300"
   >
     <thead>
       <tr class="bg-gray-100">
-        <th class="border border-gray-300 px-4 py-2">ID</th>
         <th class="border border-gray-300 px-4 py-2">Nom</th>
         <th class="border border-gray-300 px-4 py-2">Calories</th>
-        <th class="border border-gray-300 px-4 py-2">Date</th>
+        <th class="border border-gray-300 px-4 py-2">Macronutriments</th>
         <th class="border border-gray-300 px-4 py-2">Actions</th>
       </tr>
     </thead>
     <tbody>
       <% @food_entries.each do |food_entry| %>
       <tr class="hover:bg-gray-50">
-        <td class="border border-gray-300 px-4 py-2"><%= food_entry.id %></td>
         <td class="border border-gray-300 px-4 py-2"><%= food_entry.name %></td>
         <td class="border border-gray-300 px-4 py-2">
-          <%= food_entry.calories %>
+          <%= food_entry.calories %> kcal
         </td>
-        <td class="border border-gray-300 px-4 py-2"><%= food_entry.date %></td>
+        <td class="border border-gray-300 px-4 py-2">
+          <p>Glucides : <%= food_entry.carbs %>g</p>
+          <p>Protéines : <%= food_entry.proteins %>g</p>
+          <p>Lipides : <%= food_entry.fats %>g</p>
+        </td>
         <td class="border border-gray-300 px-4 py-2">
           <!-- Voir -->
           <a
