--- a/app/views/food_entries/show.erb
+++ b/app/views/food_entries/show.erb
@@ -1,19 +1,48 @@
-<h1>
-  Détails de l'aliment</h1>
+<div class="max-w-lg mx-auto bg-white shadow-lg rounded-lg p-6 mt-10">
+  <h1 class="text-2xl font-bold text-gray-800 border-b pb-2 mb-4">
+    Détails de l'aliment
+  </h1>
 
-  <p><strong>ID :</strong> <%= @food_entry.id %></p>
-  <p><strong>Nom :</strong> <%= @food_entry.name %></p>
-  <p><strong>Calories :</strong> <%= @food_entry.calories %> kcal</p>
-  <p><strong>Date :</strong> <%= @food_entry.date %></p>
+  <p class="text-gray-700"><strong>ID :</strong> <%= @food_entry.id %></p>
+  <p class="text-gray-700"><strong>Nom :</strong> <%= @food_entry.name %></p>
+  <p class="text-gray-700">
+    <strong>Calories :</strong> <%= @food_entry.calories %> kcal
+  </p>
+  <p class="text-gray-700">
+    <strong>Glucides :</strong> <%= @food_entry.carbs %>g
+  </p>
+  <p class="text-gray-700">
+    <strong>Protéines :</strong> <%= @food_entry.proteins %>g
+  </p>
+  <p class="text-gray-700">
+    <strong>Lipides :</strong> <%= @food_entry.fats %>g
+  </p>
 
-  <a href="/food_entries">Retour à la liste</a> |
-  <a href="/food_entries/<%= @food_entry.id %>/edit">Modifier</a> |
-  <form
-    action="/food_entries/<%= @food_entry.id %>"
-    method="post"
-    style="display: inline"
-  >
-    <input type="hidden" name="_method" value="delete" />
-    <button type="submit">Supprimer</button>
-  </form>
-</h1>
+  <div class="flex justify-between mt-4">
+    <a
+      href="/food_entries"
+      class="inline-block mt-4 px-6 py-2 bg-blue-500 text-white font-semibold rounded hover:bg-blue-600"
+      >Retour à la liste</a
+    >
+    <div class="flex justify-end space-x-2">
+      <a
+        href="/food_entries/<%= @food_entry.id %>/edit"
+        class="inline-block mt-4 px-6 py-2 bg-yellow-500 text-white font-semibold rounded hover:bg-yellow-600"
+        >Modifier</a
+      >
+      <form
+        action="/food_entries/<%= @food_entry.id %>"
+        method="post"
+        class="inline"
+      >
+        <input type="hidden" name="_method" value="delete" />
+        <button
+          type="submit"
+          class="inline-block mt-4 px-6 py-2 bg-red-500 text-white font-semibold rounded hover:bg-red-600"
+        >
+          Supprimer
+        </button>
+      </form>
+    </div>
+  </div>
+</div>
