style: updated css style

--- a/app/views/weights/_form.erb
+++ b/app/views/weights/_form.erb
@@ -1,7 +1,7 @@
 <div class="space-y-2">
   <section>
     <label for="weight" class="block text-gray-700 font-medium"
-      >Poids (kg) :</label
+      >Masse (kg) :</label
     >
     <input
       type="number"
