--- a/app/views/weights/show.erb
+++ b/app/views/weights/show.erb
@@ -1,12 +1,33 @@
-<h1>Détails de l'entrée de poids</h1>
+<div class="max-w-lg mx-auto bg-white shadow-lg rounded-lg p-6 mt-10">
+  <h1 class="text-2xl font-bold text-gray-800 border-b pb-2 mb-4">
+    Détails de l'entrée
+  </h1>
 
-<p><strong>ID :</strong> <%= @weight.id %></p>
-<p><strong>Poids :</strong> <%= @weight.weight %> kg</p>
-<p><strong>Date :</strong> <%= @weight.date %></p>
+  <p class="text-gray-700"><strong>ID :</strong> <%= @weight.id %></p>
+  <p class="text-gray-700"><strong>Masse :</strong> <%= @weight.weight %> kg</p>
+  <p class="text-gray-700"><strong>Date :</strong> <%= @weight.date %></p>
 
-<a href="/weights">Retour à la liste</a> |
-<a href="/weights/<%= @weight.id %>/edit">Modifier</a> |
-<form action="/weights/<%= @weight.id %>" method="post" style="display: inline">
-  <input type="hidden" name="_method" value="delete" />
-  <button type="submit">Supprimer</button>
-</form>
+  <div class="flex justify-between mt-4">
+    <a
+      href="/weights"
+      class="inline-block mt-4 px-6 py-2 bg-blue-500 text-white font-semibold rounded hover:bg-blue-600"
+      >Retour à la liste</a
+    >
+    <div class="flex justify-end space-x-2">
+      <a
+        href="/weights/<%= @weight.id %>/edit"
+        class="inline-block mt-4 px-6 py-2 bg-yellow-500 text-white font-semibold rounded hover:bg-yellow-600"
+        >Modifier</a
+      >
+      <form action="/weights/<%= @weight.id %>" method="post" class="inline">
+        <input type="hidden" name="_method" value="delete" />
+        <button
+          type="submit"
+          class="inline-block mt-4 px-6 py-2 bg-red-500 text-white font-semibold rounded hover:bg-red-600"
+        >
+          Supprimer
+        </button>
+      </form>
+    </div>
+  </div>
+</div>
