feat: added consumptions link

--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -16,4 +16,11 @@
   >
     Voir les aliments
   </a>
+
+  <a
+    href="/consumptions"
+    class="inline-block mt-4 px-6 py-2 bg-blue-500 text-white font-semibold rounded hover:bg-blue-600"
+  >
+    Voir ma consommation
+  </a>
 </div>
