--- a/app/views/consumptions/index.erb
+++ b/app/views/consumptions/index.erb
@@ -1,6 +1,11 @@
 <div class="container mx-auto">
   <h1 class="text-2xl font-bold text-gray-800 mb-4">Consommations</h1>
 
+  <div class="mb-4">
+    <%= column_chart @calories_per_day, xtitle: "Date", ytitle: "Calories",
+    height: "400px" %>
+  </div>
+
   <table
     class="table-auto w-full text-left border-collapse border border-gray-300"
   >
