--- a/app/views/weights/index.erb
+++ b/app/views/weights/index.erb
@@ -1,6 +1,11 @@
 <div class="container mx-auto">
   <h1 class="text-2xl font-bold text-gray-800 mb-4">Entrées de masse</h1>
 
+  <div class="mb-4">
+    <%= line_chart @weights_hash, xtitle: "Date", ytitle: "Masse (kg)", height:
+    "400px" %>
+  </div>
+
   <table
     class="table-auto w-full text-left border-collapse border border-gray-300"
   >
@@ -12,10 +17,6 @@
       </tr>
     </thead>
     <tbody>
-      <section>
-        <%= line_chart @weights_hash, xtitle: "Date", ytitle: "Masse (kg)",
-        height: "400px" %>
-      </section>
       <% @weights.each do |weight| %>
       <tr class="hover:bg-gray-50">
         <td class="border border-gray-300 px-4 py-2"><%= weight.weight %></td>
