--- a/app/views/food_entries/index.erb
+++ b/app/views/food_entries/index.erb
@@ -1,6 +1,13 @@
 <div class="container mx-auto">
   <h1 class="text-2xl font-bold text-gray-800 mb-4">Aliments</h1>
 
+  <a
+    href="/food_entries/new"
+    class="inline-block my-4 px-6 py-2 bg-blue-500 text-white font-semibold rounded hover:bg-blue-600"
+  >
+    Ajouter une nouvelle entrée
+  </a>
+
   <table
     class="table-auto w-full text-left border-collapse border border-gray-300"
   >
@@ -91,11 +98,4 @@
       <% end %>
     </tbody>
   </table>
-
-  <a
-    href="/food_entries/new"
-    class="inline-block mt-4 px-6 py-2 bg-blue-500 text-white font-semibold rounded hover:bg-blue-600"
-  >
-    Ajouter une nouvelle entrée
-  </a>
 </div>
